--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "localizify": "^2.0.0",
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "Validator": "^1.1.4"
   }
 }
